--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>KaWah Cheung - Education</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">KaWah Cheung</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
       </span>
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">KaWah Cheung
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Education-GSOE student📚</div>
+        <p class="lead mb-4">My name is Ka Wah Cheung, I am a 2nd year student in Graduate School of Education of University of California, Riverside. Originally from HongKong. <br><br>
 
-        Enter bio here<br><br>
+        My Story about Computer Science:<br>  In the first lesson when I go in computer science, I knew nothing about coding, not even having a clue of it. I just think coding is just typing a bunch of random codes into a computer then it comes to an app or games. But when I get into it and start knowing about it, it just blows my mind, like my mind is just… totally blown away. It was too shocking for me since I can’t think of how a little program needs so much coding, I use to think everything is just simple programing that just simply need to put a lot of pictures together like Microsoft Powerpoint then just link a button so when people click it goes to elsewhere, but after I learn an about coding, I learned about even pictures are just a million of letters to form a pixel, and that a picture is million, and up to even billion of pixels. I just cannot imagine the technology that people use these days are based on and created by these people from a few decades ago and then they just keep getting better and better.
+        <br>  Since then, I started digging down for deeper research into those nerdy computer science stuff and chasing the trend after it. That was my age of 13, I have a friend working in a gaming company called Tencent, and after he learned that I love to play videos, he offered me to join his company’s program that actually teaches teenagers to code games. So, of course, I signed up for it, it was little tough at first, since I only knew about some basic stuff for coding, but after a while, after I cross the line that really helps me from basic coding to advance coding, it started to getting even harder, but even more fun! I learned some c++ language but I learned a lot about python and scratch game coding. I made a Mario-like game from Pythons and I made a Pacman-like game and a flappy bird-like game from Scratch. It was really simple stuff for most of those professional coders out there, but hey, at least I made some games.
+        <br>  After that I started to play a game called Minecraft, yes, that game every kid loves to play. But for me, I don’t really like it that much, because I could only play it myself since all those servers owned by other people on the other sides are laggy and have a lot of annoying players. So I thought, why don’t I just start a server myself so my friends and I can play in it however we want. Then I used all my money to lease a small server for about 400rmb per month, that’s about 65 US dollars at that time. So I got it, I downloaded a Linux system and use java to open up the Minecraft as a bukkit server, it sounds little complicated but it really just some simple click and few lines of coding, what’s hard is getting it into action and I finished that part already before I lease the server.
+        <br><br>
 
         Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/kawah-cheung">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/KaWahCheung1">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:kcheu023@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,30 +92,31 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Business Development Minister</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Chinese Union</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Negociated with Sponsors of club<br> 
+              • Assigning and managing jobs to Business Development Staffs<br>
+              • Participated in every meetings<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">January 2019 - October 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Vice President</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">ASB</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assigning and managing jobs to ASB Staffs<br>
+              • Participated in every meetings<br>
+              • Giving out ideas, planning and helping events<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2017 - June 2018</span>
           </div>
         </div>
 
@@ -123,17 +124,15 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Elementary School/a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Reviewed and graded student's homework<br>
+            • Managed class disciplines<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2017 - August 2017</span>
           </div>
         </div>
 
@@ -152,33 +151,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor of Education</div>
+            <div>Leadership in Education</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2018 - June 2022</span>
           </div>
         </div>
 
@@ -191,7 +168,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Capture.PNG" width="500px">
+            <img src="img/img1.jpg" width="500px">
+            <br>
+            <img src="img/img2.jpg" width="500px">
+            <img src="img/img3.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> KaWah Cheung</center><br>
 
 
   </div>
