--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Elementary School/a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Elementary School</a></div>
             <p>
             • Reviewed and graded student's homework<br>
             • Managed class disciplines<br>
