--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Business Development Minister</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Chinese Union</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.chineseunion.org/">Chinese Union</a></div>
             <p>
               • Negociated with Sponsors of club<br> 
               • Assigning and managing jobs to Business Development Staffs<br>
@@ -108,7 +108,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Vice President</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">ASB</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.pacificacademy.org/">Pacific Academy-ASB</a></div>
             <p>
               • Assigning and managing jobs to ASB Staffs<br>
               • Participated in every meetings<br>
@@ -124,7 +124,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Elementary School</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://baike.baidu.com/item/%E5%AE%9D%E5%AE%89%E4%B8%AD%E5%AD%A6%E9%99%84%E5%B1%9E%E5%B0%8F%E5%AD%A6/1165772?fr=aladdin">Bao'an Primary School</a></div>
             <p>
             • Reviewed and graded student's homework<br>
             • Managed class disciplines<br>
